# python

./: .gitignore  README.md  api.py  apiClima.py  apiFilmes.py  apiMovie.py  apiWeather.py  apiWeb.py  buscandoTermos.py  carro.py  classes.py  errors.py  fileManipulation.py  fixErros.py  funcoes.py  functions.py  king.py  listAdvanced.py  listBasic.py  listas-avancado.py  listas.py  main.py  manipulandoArquivos.py  orientacaoObjetos.py  requisicoesWeb.py  searchTermInFile.py  searchTermsInFiles.py  texto.txt  veiculo.py
apis/: README.md  requirements.txt
apis/api-rest/: README.md  client.py  main.py
apis/chat-api/: messages.py
apis/clients-api/: Insomnia-requests-api-clients.json  README.md  main.py
apps/readTextFromImage/: README.md  identifyTextInImage.py
data-engineering/: bank_system.py  functions.py  primitive_types.py  print_message.py  sets.py  type_conversion.py  variables_constant.py
data-engineering/challenges/: bank_system_v1.py  bank_system_v3.py  bank_system_v4.py  bank_system_v5.py  most_sold_product.py  total_of_selling_categories_values.py  total_of_selling_products_values.py
data-engineering/challenges/package/: README.md  __init__.py  pyproject.toml  setup.py
data-engineering/challenges/package/extract_text_from_image/: __init__.py
data-engineering/challenges/package/generate_file/: __init__.py
data-engineering/challenges/package/processing_image/: __init__.py
data-engineering/conditionals/: age_verification.py  (+2 more)
object orientation/: Main.py  king.py
object-oriented/: main.py
software-enginnering/: list-advanced.py
(+52 files in other folders)
